fix(home): Align information texts in home page for desktop version

--- a/src/components/ProductItem/ProductItem.module.scss
+++ b/src/components/ProductItem/ProductItem.module.scss
@@ -39,6 +39,7 @@
 	display: none;
 	@include for-tablet-portrait-up {
 		align-items: center;
+		cursor: pointer;
 		display: flex;
 		background-color: transparent;
 		border: none;
