--- a/src/screens/home/HomeScreen.module.scss
+++ b/src/screens/home/HomeScreen.module.scss
@@ -15,6 +15,15 @@
 		justify-content: center;
 		padding: 0;
 	}
+
+	.heroContainer {
+		margin: 10px 0;
+		max-width: 290px;
+	}
+
+	> * {
+		margin: 8px 0;
+	}
 }
 
 .pageContainer {
@@ -56,16 +65,25 @@
 	color: var(--gray1);
 	font-size: 10px;
 	font-weight: bold;
+	@include for-tablet-portrait-up {
+		font-size: 12px;
+	}
 }
 
 .textTitle {
 	color: var(--gray1);
 	font-size: 28px;
+	@include for-tablet-portrait-up {
+		font-size: 36px;
+	}
 }
 
 .textTitleRed {
 	color: var(--red1);
 	font-size: 28px;
+	@include for-tablet-portrait-up {
+		font-size: 36px;
+	}
 }
 
 .textSubTitle {
